// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with a text children 1`] = `
<styled.span>
  <DarkGrayTheme
    key=".0"
  >
    This is a text
  </DarkGrayTheme>
</styled.span>
`;

exports[`When using snapshots Should render with an element children 1`] = `
<styled.span>
  <DarkGrayTheme
    key=".0"
  >
    <div />
  </DarkGrayTheme>
</styled.span>
`;
